Fixed extra margin on the sides of the site
Came from grid wrapper adding 10px to each side to a lot for the items
on the grid. Now the items in the grid have their own margin.

--- a/css/style.css
+++ b/css/style.css
@@ -1084,7 +1084,7 @@ img.press-sites {
   -ms-justify-content: space-between;
 }
 article.people {
-  margin:  0 0 30px 0;
+  margin:  0 10px 30px 10px;
   width: 300px;
   /*height: 100px;*/
   /*overflow: hidden;*/
@@ -1425,6 +1425,23 @@ article.people {
   background: red;
 }
 
+/* FRIENDS */
+
+#friends article {
+  background: yellow;
+}
+
+/*.student-image.organization {
+  width: 150px;
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  margin-top: -25%;
+  background: red;
+}*/
+
 
 /* PARTICIPATE */
 
@@ -1439,6 +1456,7 @@ article.people {
 
 /* FOOTER */
 footer {
+  border-top: 2px solid #1ABC9C;
   width: 100%;
   position: relative;
   z-index: 30;
@@ -1684,7 +1702,7 @@ footer {
     }
   .contact-info-wrapper {
     font-family: sans-serif;
-    margin-bottom: 10px;
+    margin: 30px 0;
 
     display: flex;
     display: -webkit-flex;
@@ -1848,7 +1866,7 @@ footer {
   .mission.p-wrapper p { margin: 0 10px 10px 0; }
   .faq.p-wrapper div:first-child { margin: 0 20px 0 10px; }
   .faq.p-wrapper div { margin: 0 10px 0 10px; }
-  .grid-wrapper { margin: 0 10px; min-width: 100%; max-width: 100%; }
+  .grid-wrapper { /*margin: 0 10px;*/ min-width: 100%; max-width: 100%; }
   .content-wrapper.classes { max-width: 100%; margin: 0 10px;}
   .project { margin: 0 10px 30px 10px;}
   footer .centering-wrapper-row { min-width: 100%; max-width: 100%; }
